# agimus-hpp

./: CMakeLists.txt  package.xml
doc/: Doxyfile.extra.in  main-page.hh
launch/: hpp_interface.launch
scripts/: estimation.py  hpp_node.py
src/: CMakeLists.txt
src/agimus_hpp/: client.py  estimation.py  hpp_server_initializer.py  planning_request_adapter.py  ros_tools.py  tools.py  trajectory_publisher.py
src/agimus_hpp/manipulation/: hpp_server_initializer.py  planning_request_adapter.py
