<package format="2">
  <name>agimus_hpp</name>
  <version>0.0.0</version>
  <description>Package to link HPP to the Agimus framework</description>
  <maintainer email="hpp@laas.fr">Joseph Mirabel</maintainer>
  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>dynamic_graph_bridge_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>agimus_sot_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <exec_depend>qt_gui</exec_depend>
  <exec_depend>qt_gui_py_common</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
